2007-08-28  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (send_ro_fd): Also transfer file size.
	* nscd/nscd_helper.c (get_mapping): If nscd also transfers the
	file size don't call fstat.

	* nscd/nscd_helper.c (get_mapping): Avoid the pread call, just go
	ahead and map the file.  This should always be correct and we can
	catch problems later.

2007-08-28  Jakub Jelinek  <jakub@redhat.com>

	* libio/bits/stdio2.h (__fread_chk, __fread_unlocked_chk): New
	prototypes.
	(__fread_alias, __fread_unlocked_alias): New aliases.
	(fread): New extern inline.
	(fread_unlocked): Likewise.  Undef macro before definition of
	the inline function.
	* debug/Makefile (routines): Add fread_chk and fread_u_chk.
	(CFLAGS-fread_chk.c, CFLAGS-fread_u_chk.c): Add.
	* debug/Versions (libc): Export __fread_chk@@GLIBC_2.7
	and __fread_unlocked_chk@@GLIBC_2.7.
	* debug/fread_chk.c: New file.
	* debug/fread_u_chk.c: New file.
	* debug/tst-chk1.c (do_test): Add fread and fread_unlocked tests.

2007-08-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/syscalls.list
	(personality): Change caller to EXTRA.

2007-08-25  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/iso-2022-kr.c (BODY): Fake initialization of array buf
	to keep gcc quiet.
	* iconvdata/iso-2022-cn.c (BODY): Likewise.

	* locale/programs/ld-collate.c (collate_output): Avoid warning if
	NDEBUG is defined.

	* Makerules: Use -p option with mkdir.

	* sunrpc/key_prot.c (xdr_unixcred): Work around gcc alias warning.
	* nis/nis_xdr.c (_xdr_nis_server): Likewise.
	(_xdr_directory_obj): Likewise.
	(xdr_entry_obj): Likewise.
	(xdr_group_obj): Likewise.
	(xdr_link_obj): Likewise.
	(xdr_table_obj): Likewise.
	(_xdr_nis_result): Likewise.
	(_xdr_ns_request): Likewise.
	(_xdr_ib_request): Likewise.
	(_xdr_nis_taglist): Likewise.
	(xdr_cback_data): Likewise.
	* nis/yp_xdr.c (xdr_ypmaplist): Likewise.
	(xdr_ypresp_maplist): Likewise.

	* stdio-common/Makefile: Avoid format string warning for tst-sprint.
