@@ -1,3 +1,11 @@
+2007-08-29  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/check_pf.c (IFA_F_OPTIMISTIC): Define to
+	zero if not defined.
+	(make_request): Recognize optimistic addresses and treat them like
+	deprecated addresses.
+	Reported by Neil Horman <nhorman@redhat.com>.
+
 2007-08-28  Ulrich Drepper  <drepper@redhat.com>
 
 	* nscd/connections.c (send_ro_fd): Also transfer file size.
